# MCP-Sample

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
.github/workflows/: docker-publish.yml
docs/: AI_Architecture_Multi_Agent.excalidraw  AI_Architecture_Single_Agent.excalidraw  MCP_Tool_Discovery_Auth.excalidraw  RAG_Pipeline_MCP.excalidraw  github-oauth-callback-guide.md  oauth-callback-workflows.md
src/auth/: __init__.py  oauth.py  provider.py  token.py
src/tools/: __init__.py  sample_tools.py
tests/: conftest.py  test_hello_world.py
